# matopt

./: .gitignore  Dockerfile  docker-compose.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: __init__.py  chat.py  documents.py  export.py  followups.py  math.py  ocr.py  suggestions.py
backend/app/core/: __init__.py  chat_service.py  document_parser.py  exporter.py  latex_converter.py  math_engine.py  math_knowledge.py  ocr_service.py  python_sandbox.py
backend/app/models/: __init__.py
backend/app/schemas/: __init__.py  chat.py  document.py  export.py  followups.py  ocr.py  suggestions.py
backend/app/utils/: __init__.py  file_handler.py  latex_utils.py
backend/tests/: test_math_engine.py
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ChartRenderer.tsx  ExportButton.tsx  FileUploader.tsx  InlineMathText.tsx  MarkdownRenderer.tsx  MathInput.tsx  MessageList.tsx  PlotRenderer.tsx  Sidebar.tsx  WelcomeScreen.tsx  index.ts
frontend/src/hooks/: useChat.ts  useDocument.ts  useExport.ts
frontend/src/pages/: ChatPage.tsx  DocumentPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts  chat.ts  document.ts  export.ts  followups.ts  ocr.ts  suggestions.ts  types.ts
frontend/src/types/: conversation.ts  document.ts  export.ts  message.ts
frontend/src/utils/: fileHelpers.ts  formulaHelpers.ts
