[project]
name = "backend"
version = "0.1.0"
description = "MatOpt — intelligent mathematics assistant backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=24.1.0",
    "datasets>=3.2.0",
    "fastapi>=0.126.0",
    "httpx>=0.28.1",
    "latex2sympy2>=1.9.1",
    "mineru[all]>=2.7.6",
    "onnxruntime==1.23.1",
    "openai>=2.21.0",
    "pillow>=11.1.0",
    "pix2tex>=0.1.2",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "pypandoc>=1.15",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sympy>=1.13.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.0",
    "uvicorn[standard]>=0.40.0",
    "wolframalpha>=5.1.3",
    # ── Numerical / scientific computing ──
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "mpmath>=1.3.0",
    "matplotlib>=3.9.0",
    "pandas>=2.2.0",
    "networkx>=3.3",
    "scikit-learn>=1.5.0",
    "numba>=0.60.0",
    "cvxpy>=1.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.3",
]
